Dec 18, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.9

Dec 17, 2007 - chris
o SPARC fixes: several minor changes to avoid unaligned memory access,
    especially with duplicate keys and extended keys; hamsterdb 
    should now run fine on SPARC

Dec 14, 2007 - chris
o configure: don't use lock_exclusive on Solaris (fails on SunOS 5.9)

Dec 06, 2007 - chris
o added two tools: ham_dump (for dumping a database) and ham_info
    (for printing statistics)

Dec 03, 2007 - chris
o bugfix for SPARC: fixed an unaligned access when assigning record numbers
o bugfix for Windows x64: the offset of a memory mapped access was sometimes
    not calculated correctly

Nov 24, 2007 - chris
o added small performance improvements and fixes in the zlib-based
    compression-filter

Nov 15, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.8

Nov 14, 2007 - chris
o bugfix: the parameters for memory mapped I/O on win32 did not create 
    private copies and therefore the file could be damaged if an operation
    aborted

Nov 10, 2007 - chris
o Environments now support a configurable number of databases; the default
    is 16, but files with a pagesize of 16kb can have up to 508 databases.
    See parameter HAM_PARAM_MAX_ENV_DATABASES for ham_env_create_ex.

Nov 09, 2007 - chris
o bugfix: when deleting a database from an Environment (ham_env_erase_db), 
    the database name was not removed

Nov 06, 2007 - chris
o added a new function ham_env_get_database_names(), which returns all 
	database names in an environment.

Nov 01, 2007 - chris
o implemented zlib-based compression; a new function was added:
    ham_enable_compression()
o added a new option --disable-compression for configure; this option does not
    compile/link ham_enable_compression.

Nov 01, 2007 - chris
o added generic record filters - ham_add_record_filter and 
    ham_remove_record_filter