@@ -105,13 +105,12 @@ documentation is also available on the hamsterdb web page.
 If you want to compile hamsterdb without using the provided ./configure
 environment, you have to set some preprocessor macros:
 
-WIN32                   Build for Win32 platform
 DEBUG                   enable debugging output and diagnostic checks (slow!)
 HAM_LITTLE_ENDIAN       compile for little endian machines (i.e. x86)
 HAM_BIG_ENDIAN          compile for big endian machines (most other
                             architectures)
-HAM_32BIT               compile for 32bit
-HAM_64BIT               compile for 64bit
+HAM_32BIT               compile for 32bit (alias: WIN32)
+HAM_64BIT               compile for 64bit (alias: WIN64, also needs WIN32)
 HAM_ENABLE_INTERNAL     enable internal functions (declared in
                             include/ham/hamsterdb_int.h)
 HAM_DISABLE_COMPRESSION build without support for zlib compression
