@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../include;../../../hamsterdb-alien/inc"
+				AdditionalIncludeDirectories="../include;../../hamsterdb-alien/inc"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -64,7 +64,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../../hamsterdb-alien/libs/win32-msvc8/cppunitd.lib"
+				AdditionalDependencies="../../hamsterdb-alien/libs/win32-msvc8/cppunitd.lib"
 				LinkIncremental="2"
 				GenerateManifest="true"
 				GenerateDebugInformation="true"
@@ -124,7 +124,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../include;../../../hamsterdb-alien/inc"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
+				PreprocessorDefinitions="WIN32;WIN64;_DEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -202,7 +202,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../include;../../../hamsterdb-alien/inc"
+				AdditionalIncludeDirectories="../include;../../hamsterdb-alien/inc"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -221,7 +221,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../../hamsterdb-alien/libs/win32-msvc8/cppunit.lib"
+				AdditionalDependencies="../../hamsterdb-alien/libs/win32-msvc8/cppunit.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -282,7 +282,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../include;../../../hamsterdb-alien/inc"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
+				PreprocessorDefinitions="WIN32;WIN64;NDEBUG;_CONSOLE;HAM_LITTLE_ENDIAN;_CRT_SECURE_NO_WARNINGS;VISUAL_STUDIO"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
